--- a/packages/themes/plasma-themes/src/css/plasma_infra__light.css
+++ b/packages/themes/plasma-themes/src/css/plasma_infra__light.css
@@ -72,9 +72,12 @@
   --surface-solid-default-active: #6D707EFF;
   --surface-transparent-primary-hover: #08090C05;
   --surface-transparent-primary-active: #08090C0F;
+  --surface-transparent-secondary-hover: #08090C05;
+  --surface-transparent-secondary-active: #08090C1A;
   --surface-solid-card: #ECEDF4FF;
   --surface-solid-default: #777A88FF;
   --surface-transparent-primary: #07080B0A;
+  --surface-transparent-secondary: #07080B0F;
   --on-dark-surface-solid-card-hover: #5E5F6EFF;
   --on-dark-surface-solid-card-active: #42434DFF;
   --on-dark-surface-solid-card-brightness: #595A69FF;
@@ -82,9 +85,12 @@
   --on-dark-surface-solid-default-active: #A2A7B9FF;
   --on-dark-surface-transparent-primary-hover: #F8F9FC05;
   --on-dark-surface-transparent-primary-active: #F8F9FC0F;
+  --on-dark-surface-transparent-secondary-hover: #F8F9FC05;
+  --on-dark-surface-transparent-secondary-active: #F8F9FC1A;
   --on-dark-surface-solid-card: #4B4C58FF;
   --on-dark-surface-solid-default: #AEB2C2FF;
   --on-dark-surface-transparent-primary: #F7F8FB0A;
+  --on-dark-surface-transparent-secondary: #F7F8FB0F;
   --on-light-surface-solid-card-hover: #F9F9FBFF;
   --on-light-surface-solid-card-active: #E5E6F0FF;
   --on-light-surface-solid-card-brightness: #FFFFFFFF;
@@ -92,9 +98,12 @@
   --on-light-surface-solid-default-active: #6D707EFF;
   --on-light-surface-transparent-primary-hover: #08090C05;
   --on-light-surface-transparent-primary-active: #08090C0F;
+  --on-light-surface-transparent-secondary-hover: #08090C05;
+  --on-light-surface-transparent-secondary-active: #08090C1A;
   --on-light-surface-solid-card: #ECEDF4FF;
   --on-light-surface-solid-default: #777A88FF;
   --on-light-surface-transparent-primary: #07080B0A;
+  --on-light-surface-transparent-secondary: #07080B0F;
   --inverse-surface-solid-card-hover: #5E5F6EFF;
   --inverse-surface-solid-card-active: #42434DFF;
   --inverse-surface-solid-card-brightness: #595A69FF;
@@ -102,9 +111,12 @@
   --inverse-surface-solid-default-active: #A2A7B9FF;
   --inverse-surface-transparent-primary-hover: #F8F9FC05;
   --inverse-surface-transparent-primary-active: #F8F9FC0F;
+  --inverse-surface-transparent-secondary-hover: #F8F9FC05;
+  --inverse-surface-transparent-secondary-active: #F8F9FC1A;
   --inverse-surface-solid-card: #4B4C58FF;
   --inverse-surface-solid-default: #AEB2C2FF;
   --inverse-surface-transparent-primary: #F7F8FB0A;
+  --inverse-surface-transparent-secondary: #F7F8FB0F;
   --background-primary: #AEB2C2FF;
   --background-secondary: #C4C7D4FF;
   --background-tertiary: #D8DCE8FF;
