--- a/packages/themes/plasma-themes/src/css/plasma_homeds.module.css
+++ b/packages/themes/plasma-themes/src/css/plasma_homeds.module.css
@@ -1859,6 +1859,15 @@
   --plasma-typo-h5-font-family: var(--plasma-typo-header-font-family);
   --plasma-typo-h5-letter-spacing: normal;
   --plasma-typo-h5-font-style: normal;
+  --plasma-typo-h6-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-letter-spacing: normal;
+  --plasma-typo-h6-font-style: normal;
+  --plasma-typo-h6-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-medium-letter-spacing: normal;
+  --plasma-typo-h6-medium-font-style: normal;
+  --plasma-typo-h6-bold-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-bold-letter-spacing: normal;
+  --plasma-typo-h6-bold-font-style: normal;
   --plasma-typo-body-l-bold-font-family: var(--plasma-typo-body-font-family);
   --plasma-typo-body-l-bold-letter-spacing: -0.02em;
   --plasma-typo-body-l-bold-font-style: normal;
@@ -2016,6 +2025,15 @@
     --plasma-typo-h5-font-size: 1rem;
     --plasma-typo-h5-font-weight: 400;
     --plasma-typo-h5-line-height: 1.375rem;
+    --plasma-typo-h6-font-size: 0.625rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 0.875rem;
+    --plasma-typo-h6-medium-font-size: 0.625rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 0.875rem;
+    --plasma-typo-h6-bold-font-size: 0.625rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 0.875rem;
     --plasma-typo-body-l-bold-font-size: 1.125rem;
     --plasma-typo-body-l-bold-font-weight: 600;
     --plasma-typo-body-l-bold-line-height: 1.375rem;
@@ -2174,6 +2192,15 @@
     --plasma-typo-h5-font-size: 1rem;
     --plasma-typo-h5-font-weight: 400;
     --plasma-typo-h5-line-height: 1.375rem;
+    --plasma-typo-h6-font-size: 0.625rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 0.875rem;
+    --plasma-typo-h6-medium-font-size: 0.625rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 0.875rem;
+    --plasma-typo-h6-bold-font-size: 0.625rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 0.875rem;
     --plasma-typo-body-l-bold-font-size: 1.125rem;
     --plasma-typo-body-l-bold-font-weight: 600;
     --plasma-typo-body-l-bold-line-height: 1.375rem;
@@ -2332,6 +2359,15 @@
     --plasma-typo-h5-font-size: 1.125rem;
     --plasma-typo-h5-font-weight: 400;
     --plasma-typo-h5-line-height: 1.5rem;
+    --plasma-typo-h6-font-size: 0.75rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 1rem;
+    --plasma-typo-h6-medium-font-size: 0.75rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 1rem;
+    --plasma-typo-h6-bold-font-size: 0.75rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 1rem;
     --plasma-typo-body-l-bold-font-size: 1.125rem;
     --plasma-typo-body-l-bold-font-weight: 600;
     --plasma-typo-body-l-bold-line-height: 1.375rem;
