--- a/packages/themes/plasma-themes/src/css/stylesSalute__dark.css
+++ b/packages/themes/plasma-themes/src/css/stylesSalute__dark.css
@@ -1389,6 +1389,12 @@
   --plasma-typo-h5-bold-font-family: var(--plasma-typo-header-font-family);
   --plasma-typo-h5-bold-letter-spacing: normal;
   --plasma-typo-h5-bold-font-style: normal;
+  --plasma-typo-h6-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-letter-spacing: normal;
+  --plasma-typo-h6-font-style: normal;
+  --plasma-typo-h6-bold-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-bold-letter-spacing: normal;
+  --plasma-typo-h6-bold-font-style: normal;
   --plasma-typo-body-l-font-family: var(--plasma-typo-body-font-family);
   --plasma-typo-body-l-letter-spacing: -0.02em;
   --plasma-typo-body-l-font-style: normal;
@@ -1467,6 +1473,9 @@
   --plasma-typo-h5-medium-font-family: var(--plasma-typo-header-font-family);
   --plasma-typo-h5-medium-letter-spacing: normal;
   --plasma-typo-h5-medium-font-style: normal;
+  --plasma-typo-h6-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-medium-letter-spacing: normal;
+  --plasma-typo-h6-medium-font-style: normal;
   --plasma-typo-body-l-medium-font-family: var(--plasma-typo-body-font-family);
   --plasma-typo-body-l-medium-letter-spacing: -0.02em;
   --plasma-typo-body-l-medium-font-style: normal;
@@ -1546,6 +1555,12 @@
     --plasma-typo-h5-bold-font-size: 1rem;
     --plasma-typo-h5-bold-font-weight: 600;
     --plasma-typo-h5-bold-line-height: 1.375rem;
+    --plasma-typo-h6-font-size: 0.625rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 0.875rem;
+    --plasma-typo-h6-bold-font-size: 0.625rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 0.875rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -1624,6 +1639,9 @@
     --plasma-typo-h5-medium-font-size: 1rem;
     --plasma-typo-h5-medium-font-weight: 500;
     --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-h6-medium-font-size: 0.625rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 0.875rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
@@ -1704,6 +1722,12 @@
     --plasma-typo-h5-bold-font-size: 1rem;
     --plasma-typo-h5-bold-font-weight: 600;
     --plasma-typo-h5-bold-line-height: 1.375rem;
+    --plasma-typo-h6-font-size: 0.625rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 0.875rem;
+    --plasma-typo-h6-bold-font-size: 0.625rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 0.875rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -1782,6 +1806,9 @@
     --plasma-typo-h5-medium-font-size: 1rem;
     --plasma-typo-h5-medium-font-weight: 500;
     --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-h6-medium-font-size: 0.625rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 0.875rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
@@ -1862,6 +1889,12 @@
     --plasma-typo-h5-bold-font-size: 1.125rem;
     --plasma-typo-h5-bold-font-weight: 600;
     --plasma-typo-h5-bold-line-height: 1.5rem;
+    --plasma-typo-h6-font-size: 0.75rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 1rem;
+    --plasma-typo-h6-bold-font-size: 0.75rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 1rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -1940,6 +1973,9 @@
     --plasma-typo-h5-medium-font-size: 1.125rem;
     --plasma-typo-h5-medium-font-weight: 500;
     --plasma-typo-h5-medium-line-height: 1.5rem;
+    --plasma-typo-h6-medium-font-size: 0.75rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 1rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
